[package]
name = "redox_netstack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dnsd"
path = "src/dnsd/main.rs"

[[bin]]
name = "smolnetd"
path = "src/smolnetd/main.rs"

[lib]
name = "redox_netstack"
path = "src/lib/lib.rs"

[dependencies]
netutils = { git = "https://gitlab.redox-os.org/redox-os/netutils.git" }
redox_event = "0.4.1"
redox-daemon = "0.1.2"
redox_syscall = "0.5"
redox-log = "0.1"
byteorder = { version = "1.0", default-features = false }
dns-parser = "0.7.1"
libredox = { version = "0.1.3", features = ["mkns"] }
anyhow = "1.0.81"
ioslice = "0.6.0"

[dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_warn"]

[dependencies.smoltcp]
version = "0.10.0"
default-features = false
features = [
    "std",
    "medium-ethernet", "medium-ip",
    "proto-ipv4",
    "socket-raw", "socket-icmp", "socket-udp", "socket-tcp",
    "iface-max-addr-count-8",
    "log"
]
#For debugging: "log", "verbose"

[profile.release]
lto = true

[patch.crates-io]
mio = { git = "https://gitlab.redox-os.org/redox-os/mio.git", branch = "redox-unix" }
net2 = { git = "https://gitlab.redox-os.org/redox-os/net2-rs.git", branch = "master" }
